[package]
authors = ["Martin Heistermann <git@mheistermann.de>"]
name = "lightfield_render"
version = "0.1.0"

[dependencies]
cgmath = "0.9.1"
env_logger = "0.3.3"
image = "*"
lightfield_loader = "0.3.0"
log = "0.3.6"
notify = "^2.5.0"
zip = "*"

[dependencies.glium]
git = "https://github.com/mheistermann/glium"
